[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-mcp-server"
version = "0.1.0"
description = "이미지 생성 기능을 제공하는 MCP 서버"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "개발동생"}
]
dependencies = [
    "fastmcp==2.3.4",
    "gradio-client==1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["."] 